Fix header spacing
Fixes issue with abbreviation and permalink in header

--- a/docs/stylesheet/extra.css
+++ b/docs/stylesheet/extra.css
@@ -289,19 +289,22 @@
 }
 
 /* Breaks Abbreviations */
-/* @media screen and (min-width: 76.25em) {
+@media screen and (min-width: 76.25em) {
 	h1, h2, h3, h4, h5, h6 {
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-	} */
+		column-gap: 0.2em;
+		position: relative;
+		padding-bottom: 0.3em;
+	}
 
   /* Sets icon location to left of header */
 	/* .headerlink {
 		order: -1;
 		margin-left: calc(var(--permalink-size) * -1 - var(--permalink-spacing)) !important;
-	}
-} */
+	} */
+}
 
 
 
